tests/parser/fail/assign-to-self.som
"test:
failMessage:
  - contains: assign
  - contains: self
"

AssignToSelf = (
  run = (
    self := 42.
  )
)
